tests/ui/diagnostic_namespace/on_unimplemented/feature-gate-diagnostic_on_unimplemented.stderr
error[E0658]: `#[diagnostic]` attribute name space is experimental
  --> $DIR/feature-gate-diagnostic_on_unimplemented.rs:1:3
   |
LL | #[diagnostic::on_unimplemented(message = "Foo")]
   |   ^^^^^^^^^^
   |
   = note: see issue #111996 <https://github.com/rust-lang/rust/issues/111996> for more information
   = help: add `#![feature(diagnostic_namespace)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
