tests/ui/diagnostic_namespace/on_unimplemented/feature-gate-diagnostic_on_unimplemented.rs
#[diagnostic::on_unimplemented(message = "Foo")]
//~^ERROR `#[diagnostic]` attribute name space is experimental [E0658]
pub trait Bar {
}

fn main() {
}
